[gd_scene load_steps=9 format=3 uid="uid://co41nrvqyx6g8"]

[ext_resource type="Script" uid="uid://cwl7hqcbavcop" path="res://Scripts/CompletionCelebration.gd" id="1"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="2"]
[ext_resource type="Texture2D" uid="uid://bedyjdu5rblv8" path="res://gui/Update/UI/ui (1).png" id="2_3id8v"]
[ext_resource type="Texture2D" uid="uid://5322c8dbaao7" path="res://gui/newicon/check.png" id="3"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="4_3id8v"]
[ext_resource type="Texture2D" uid="uid://5kclvhwf1uke" path="res://gui/Update/UI/green button.png" id="6_uu2wo"]
[ext_resource type="Texture2D" uid="uid://cylxg6njg7bam" path="res://gui/Update/UI/yellow button.png" id="7_up78n"]
[ext_resource type="AudioStream" uid="uid://bhn1ijdk0yxbj" path="res://audio/theater-applause-128kbps.mp3" id="8_up78n"]

[node name="CompletionCelebration" type="CanvasLayer"]
layer = 200
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PopupContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PopupContainer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PopupBackground" type="NinePatchRect" parent="PopupContainer/CenterContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
texture = ExtResource("2_3id8v")
region_rect = Rect2(20.7003, 0, 65.1658, 20.6818)
patch_margin_top = 19
patch_margin_bottom = 474

[node name="MainContainer" type="VBoxContainer" parent="PopupContainer/CenterContainer/PopupBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 51.0
offset_right = -30.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2

[node name="CelebrationIcon" type="TextureRect" parent="PopupContainer/CenterContainer/PopupBackground/MainContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="PopupContainer/CenterContainer/PopupBackground/MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.2, 0.6, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3id8v")
theme_override_font_sizes/font_size = 24
text = "Great Job!"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="PopupContainer/CenterContainer/PopupBackground/MainContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 18
text = "You completed the"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ProgressContainer" type="VBoxContainer" parent="PopupContainer/CenterContainer/PopupBackground/MainContainer"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="PopupContainer/CenterContainer/PopupBackground/MainContainer/ProgressContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 16
text = "Letters Progress: 1/26"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PopupContainer/CenterContainer/PopupBackground/MainContainer/ProgressContainer"]
custom_minimum_size = Vector2(250, 20)
layout_mode = 2
show_percentage = false

[node name="ButtonContainer" type="HBoxContainer" parent="PopupContainer/CenterContainer/PopupBackground/MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="TryAgainButton" type="Button" parent="PopupContainer/CenterContainer/PopupBackground/MainContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 16
text = "Again"
icon = ExtResource("6_uu2wo")
flat = true
icon_alignment = 1
expand_icon = true

[node name="NextButton" type="Button" parent="PopupContainer/CenterContainer/PopupBackground/MainContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 16
text = "Next"
icon = ExtResource("7_up78n")
flat = true
icon_alignment = 1
expand_icon = true

[node name="CelebrationSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_up78n")

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="PopupContainer/CenterContainer/PopupBackground/MainContainer/ButtonContainer/TryAgainButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="PopupContainer/CenterContainer/PopupBackground/MainContainer/ButtonContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="mouse_entered" from="PopupContainer/CenterContainer/PopupBackground/MainContainer/ButtonContainer/NextButton" to="." method="_on_button_hover"]
[connection signal="pressed" from="PopupContainer/CenterContainer/PopupBackground/MainContainer/ButtonContainer/NextButton" to="." method="_on_next_button_pressed"]
